<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.6"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Linear Layout(rainbow 3.1)"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:background="@color/colorRed"
        android:layout_weight="0.6"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:background="@color/colorOrange"
        android:layout_weight="0.6"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:background="@color/colorYellow"
        android:layout_weight="0.6"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:background="@color/colorGreen"
        android:layout_weight="0.6"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:textColor="#FDFEFE"
        android:background="@color/colorBlue"
        android:layout_weight="0.6"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_6"
        android:textColor="#FDFEFE"
        android:background="@color/colorIndigo"
        android:layout_weight="0.6"/>

    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorViolet"
        android:text="@string/button_7"
        android:layout_weight="0.6"/>

</LinearLayout>
