<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">
        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/card_balance" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/interest_rate"/>
        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:layout_gravity="right"
            android:layout_marginLeft="2dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/payment"/>
        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:layout_gravity="right"
            android:layout_marginLeft="78dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:padding="7dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/final_balance"/>
        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@color/colorWhite"
            android:layout_marginLeft="59dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/time"/>
        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:layout_gravity="right"
            android:layout_marginLeft="75dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/expected_interest_rate"/>
        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:layout_gravity="right"
            android:layout_marginLeft="40dp"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:text="compute"
        android:textColor="@color/colorBlack"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:text="clear"
        android:textColor="@color/colorBlack"/>

</LinearLayout>
